y.output
Nonterminals useless in grammar

   M1
   M2
   M3
   M5
   N
   GOTO_emit


Terminals unused in grammar

   INLINE
   RESTRICT
   ALIGNAS
   ALIGNOF
   ATOMIC
   BOOL
   COMPLEX
   GENERIC
   IMAGINARY
   NORETURN
   STATIC_ASSERT
   THREAD_LOCAL
   FUNC_NAME
   TYPEDEF_NAME
   ENUMERATION_CONSTANT


Rules useless in grammar

  220 M1: logical_and_expression AND_OP

  221 M2: logical_or_expression OR_OP

  222 M3: logical_or_expression '?'

  223 M5: CASE constant_expression ':'

  224 N: %empty

  225 GOTO_emit: %empty


State 53 conflicts: 19 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP

   13 argument_expression_list: assignment_expression
   14                         | argument_expression_list ',' assignment_expression

   15 unary_expression: postfix_expression
   16                 | INC_OP unary_expression
   17                 | DEC_OP unary_expression
   18                 | unary_operator cast_expression
   19                 | SIZEOF unary_expression
   20                 | SIZEOF '(' type_name ')'

   21 unary_operator: '&'
   22               | '*'
   23               | '+'
   24               | '-'
   25               | '~'
   26               | '!'

   27 cast_expression: unary_expression
   28                | '(' type_name ')' cast_expression

   29 multiplicative_expression: cast_expression
   30                          | multiplicative_expression '*' cast_expression
   31                          | multiplicative_expression '/' cast_expression
   32                          | multiplicative_expression '%' cast_expression

   33 additive_expression: multiplicative_expression
   34                    | additive_expression '+' multiplicative_expression
   35                    | additive_expression '-' multiplicative_expression

   36 shift_expression: additive_expression
   37                 | shift_expression LEFT_OP additive_expression
   38                 | shift_expression RIGHT_OP additive_expression

   39 relational_expression: shift_expression
   40                      | relational_expression '<' shift_expression
   41                      | relational_expression '>' shift_expression
   42                      | relational_expression LE_OP shift_expression
   43                      | relational_expression GE_OP shift_expression

   44 equality_expression: relational_expression
   45                    | equality_expression EQ_OP relational_expression
   46                    | equality_expression NE_OP relational_expression

   47 and_expression: equality_expression
   48               | and_expression '&' equality_expression

   49 exclusive_or_expression: and_expression
   50                        | exclusive_or_expression '^' and_expression

   51 inclusive_or_expression: exclusive_or_expression
   52                        | inclusive_or_expression '|' exclusive_or_expression

   53 M: %empty

   54 logical_and_expression: inclusive_or_expression
   55                       | logical_and_expression AND_OP inclusive_or_expression

   56 logical_or_expression: logical_and_expression
   57                      | logical_or_expression OR_OP logical_and_expression

   58 conditional_expression: logical_or_expression
   59                       | logical_or_expression '?' expression ':' conditional_expression

   60 assignment_expression: conditional_expression
   61                      | unary_expression assignment_operator assignment_expression

   62 assignment_operator: '='
   63                    | MUL_ASSIGN
   64                    | DIV_ASSIGN
   65                    | MOD_ASSIGN
   66                    | ADD_ASSIGN
   67                    | SUB_ASSIGN
   68                    | LEFT_ASSIGN
   69                    | RIGHT_ASSIGN
   70                    | AND_ASSIGN
   71                    | XOR_ASSIGN
   72                    | OR_ASSIGN

   73 expression: assignment_expression
   74           | expression ',' assignment_expression

   75 constant_expression: conditional_expression

   76 declaration: declaration_specifiers ';'
   77            | declaration_specifiers init_declarator_list ';'

   78 declaration_specifiers: storage_class_specifier
   79                       | storage_class_specifier declaration_specifiers
   80                       | type_specifier
   81                       | type_specifier declaration_specifiers
   82                       | type_qualifier
   83                       | type_qualifier declaration_specifiers

   84 init_declarator_list: init_declarator
   85                     | init_declarator_list ',' init_declarator

   86 init_declarator: declarator
   87                | declarator '=' initializer

   88 storage_class_specifier: TYPEDEF
   89                        | EXTERN
   90                        | STATIC
   91                        | AUTO
   92                        | REGISTER

   93 type_specifier: VOID
   94               | CHAR
   95               | SHORT
   96               | INT
   97               | LONG
   98               | FLOAT
   99               | DOUBLE
  100               | SIGNED
  101               | UNSIGNED
  102               | struct_or_union_specifier
  103               | enum_specifier
  104               | TYPE_NAME

  105 struct_or_union_specifier: struct_or_union IDENTIFIER E5 '{' struct_declaration_list '}'
  106                          | struct_or_union E5 '{' struct_declaration_list '}'
  107                          | struct_or_union IDENTIFIER

  108 E5: %empty

  109 struct_or_union: STRUCT
  110                | UNION

  111 struct_declaration_list: struct_declaration
  112                        | struct_declaration_list struct_declaration

  113 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  114 specifier_qualifier_list: type_specifier specifier_qualifier_list
  115                         | type_specifier
  116                         | type_qualifier specifier_qualifier_list
  117                         | type_qualifier

  118 struct_declarator_list: struct_declarator
  119                       | struct_declarator_list ',' struct_declarator

  120 struct_declarator: declarator
  121                  | ':' constant_expression
  122                  | declarator ':' constant_expression

  123 enum_specifier: ENUM '{' enumerator_list '}'
  124               | ENUM IDENTIFIER '{' enumerator_list '}'
  125               | ENUM IDENTIFIER

  126 enumerator_list: enumerator
  127                | enumerator_list ',' enumerator

  128 enumerator: IDENTIFIER
  129           | IDENTIFIER '=' constant_expression

  130 type_qualifier: CONST
  131               | VOLATILE

  132 declarator: pointer direct_declarator
  133           | direct_declarator

  134 direct_declarator: IDENTIFIER
  135                  | '(' declarator ')'
  136                  | direct_declarator '[' constant_expression ']'
  137                  | direct_declarator '[' ']'
  138                  | direct_declarator '(' E3 parameter_type_list ')'
  139                  | direct_declarator '(' E3 identifier_list ')'
  140                  | direct_declarator '(' E3 ')'

  141 E3: %empty

  142 pointer: '*'
  143        | '*' type_qualifier_list
  144        | '*' pointer
  145        | '*' type_qualifier_list pointer

  146 type_qualifier_list: type_qualifier
  147                    | type_qualifier_list type_qualifier

  148 parameter_type_list: parameter_list
  149                    | parameter_list ',' ELLIPSIS

  150 parameter_list: parameter_declaration
  151               | parameter_list ',' parameter_declaration

  152 parameter_declaration: declaration_specifiers declarator
  153                      | declaration_specifiers abstract_declarator
  154                      | declaration_specifiers

  155 identifier_list: IDENTIFIER
  156                | identifier_list ',' IDENTIFIER

  157 type_name: specifier_qualifier_list
  158          | specifier_qualifier_list abstract_declarator

  159 abstract_declarator: pointer
  160                    | direct_abstract_declarator
  161                    | pointer direct_abstract_declarator

  162 direct_abstract_declarator: '(' abstract_declarator ')'
  163                           | '[' ']'
  164                           | '[' constant_expression ']'
  165                           | direct_abstract_declarator '[' ']'
  166                           | direct_abstract_declarator '[' constant_expression ']'
  167                           | '(' ')'
  168                           | '(' parameter_type_list ')'
  169                           | direct_abstract_declarator '(' ')'
  170                           | direct_abstract_declarator '(' parameter_type_list ')'

  171 initializer: assignment_expression
  172            | '{' initializer_list '}'
  173            | '{' initializer_list ',' '}'

  174 initializer_list: initializer
  175                 | initializer_list ',' M initializer

  176 statement: labeled_statement
  177          | compound_statement
  178          | expression_statement
  179          | selection_statement
  180          | iteration_statement
  181          | jump_statement

  182 labeled_statement: IDENTIFIER ':' M statement
  183                  | CASE constant_expression ':' statement
  184                  | DEFAULT ':' statement

  185 compound_statement: '{' '}'
  186                   | E1 statement_list '}'
  187                   | E1 declaration_list '}'
  188                   | '{' declaration_list statement_list '}'

  189 E1: '{'

  190 declaration_list: declaration
  191                 | declaration_list M declaration

  192 statement_list: statement
  193               | statement_list M statement

  194 expression_statement: ';'
  195                     | expression ';'

  196 M4: IF '(' expression ')'

  197 selection_statement: M4 M statement ELSE M statement
  198                    | M4 M statement
  199                    | SWITCH '(' expression ')' statement

  200 M6: expression

  201 M7: expression_statement

  202 iteration_statement: WHILE '(' M M6 ')' M statement
  203                    | DO M statement WHILE '(' M M6 ')' ';'
  204                    | FOR '(' expression_statement M M7 ')' M statement
  205                    | FOR '(' expression_statement M M7 M expression ')' M statement

  206 jump_statement: GOTO IDENTIFIER ';'
  207               | CONTINUE ';'
  208               | BREAK ';'
  209               | RETURN ';'
  210               | RETURN expression ';'

  211 translation_unit: external_declaration
  212                 | translation_unit M external_declaration

  213 external_declaration: function_definition
  214                     | declaration

  215 function_definition: declaration_specifiers declarator E2 declaration_list compound_statement
  216                    | declaration_specifiers declarator E2 compound_statement
  217                    | declarator declaration_list compound_statement
  218                    | declarator compound_statement

  219 E2: %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 26
'%' (37) 32
'&' (38) 21 48
'(' (40) 4 7 8 20 28 135 138 139 140 162 167 168 169 170 196 199 202
    203 204 205
')' (41) 4 7 8 20 28 135 138 139 140 162 167 168 169 170 196 199 202
    203 204 205
'*' (42) 22 30 142 143 144 145
'+' (43) 23 34
',' (44) 14 74 85 119 127 149 151 156 173 175
'-' (45) 24 35
'.' (46) 9
'/' (47) 31
':' (58) 59 121 122 182 183 184
';' (59) 76 77 113 194 195 203 206 207 208 209 210
'<' (60) 40
'=' (61) 62 87 129
'>' (62) 41
'?' (63) 59
'[' (91) 6 136 137 163 164 165 166
']' (93) 6 136 137 163 164 165 166
'^' (94) 50
'{' (123) 105 106 123 124 172 173 185 188 189
'|' (124) 52
'}' (125) 105 106 123 124 172 173 185 186 187 188
'~' (126) 25
error (256)
CHAR (258) 94
CONST (259) 130
CASE (260) 183
CONTINUE (261) 207
DEFAULT (262) 184
DO (263) 203
DOUBLE (264) 99
ELSE (265) 197
ENUM (266) 123 124 125
EXTERN (267) 89
FLOAT (268) 98
FOR (269) 204 205
IF (270) 196
INLINE (271)
INT (272) 96
LONG (273) 97
IFX (274)
REGISTER (275) 92
RESTRICT (276)
RETURN (277) 209 210
SHORT (278) 95
SIGNED (279) 100
STATIC (280) 90
STRUCT (281) 109
SWITCH (282) 199
TYPEDEF (283) 88
UNION (284) 110
UNSIGNED (285) 101
VOID (286) 93
VOLATILE (287) 131
WHILE (288) 202 203
ALIGNAS (289)
ALIGNOF (290)
ATOMIC (291)
BOOL (292)
COMPLEX (293)
GENERIC (294)
IMAGINARY (295)
NORETURN (296)
STATIC_ASSERT (297)
THREAD_LOCAL (298)
FUNC_NAME (299)
AUTO (300) 91
BREAK (301) 208
GOTO (302) 206
TYPEDEF_NAME (303)
IDENTIFIER (304) 1 9 10 105 107 124 125 128 129 134 155 156 182 206
CONSTANT (305) 2
ENUMERATION_CONSTANT (306)
STRING_LITERAL (307) 3
PTR_OP (308) 10
INC_OP (309) 11 16
DEC_OP (310) 12 17
LEFT_OP (311) 37
RIGHT_OP (312) 38
LE_OP (313) 42
GE_OP (314) 43
EQ_OP (315) 45
NE_OP (316) 46
AND_OP (317) 55
OR_OP (318) 57
MUL_ASSIGN (319) 63
DIV_ASSIGN (320) 64
MOD_ASSIGN (321) 65
ADD_ASSIGN (322) 66
SUB_ASSIGN (323) 67
LEFT_ASSIGN (324) 68
RIGHT_ASSIGN (325) 69
AND_ASSIGN (326) 70
XOR_ASSIGN (327) 71
OR_ASSIGN (328) 72
TYPE_NAME (329) 104
ELLIPSIS (330) 149
SIZEOF (331) 19 20


Nonterminals, with rules where they appear

$accept (101)
    on left: 0
primary_expression (102)
    on left: 1 2 3 4, on right: 5
postfix_expression (103)
    on left: 5 6 7 8 9 10 11 12, on right: 6 7 8 9 10 11 12 15
argument_expression_list (104)
    on left: 13 14, on right: 8 14
unary_expression (105)
    on left: 15 16 17 18 19 20, on right: 16 17 19 27 61
unary_operator (106)
    on left: 21 22 23 24 25 26, on right: 18
cast_expression (107)
    on left: 27 28, on right: 18 28 29 30 31 32
multiplicative_expression (108)
    on left: 29 30 31 32, on right: 30 31 32 33 34 35
additive_expression (109)
    on left: 33 34 35, on right: 34 35 36 37 38
shift_expression (110)
    on left: 36 37 38, on right: 37 38 39 40 41 42 43
relational_expression (111)
    on left: 39 40 41 42 43, on right: 40 41 42 43 44 45 46
equality_expression (112)
    on left: 44 45 46, on right: 45 46 47 48
and_expression (113)
    on left: 47 48, on right: 48 49 50
exclusive_or_expression (114)
    on left: 49 50, on right: 50 51 52
inclusive_or_expression (115)
    on left: 51 52, on right: 52 54 55
M (116)
    on left: 53, on right: 175 182 191 193 197 198 202 203 204 205
    212
logical_and_expression (117)
    on left: 54 55, on right: 55 56 57
logical_or_expression (118)
    on left: 56 57, on right: 57 58 59
conditional_expression (119)
    on left: 58 59, on right: 59 60 75
assignment_expression (120)
    on left: 60 61, on right: 13 14 61 73 74 171
assignment_operator (121)
    on left: 62 63 64 65 66 67 68 69 70 71 72, on right: 61
expression (122)
    on left: 73 74, on right: 4 6 59 74 195 196 199 200 205 210
constant_expression (123)
    on left: 75, on right: 121 122 129 136 164 166 183
declaration (124)
    on left: 76 77, on right: 190 191 214
declaration_specifiers (125)
    on left: 78 79 80 81 82 83, on right: 76 77 79 81 83 152 153 154
    215 216
init_declarator_list (126)
    on left: 84 85, on right: 77 85
init_declarator (127)
    on left: 86 87, on right: 84 85
storage_class_specifier (128)
    on left: 88 89 90 91 92, on right: 78 79
type_specifier (129)
    on left: 93 94 95 96 97 98 99 100 101 102 103 104, on right: 80
    81 114 115
struct_or_union_specifier (130)
    on left: 105 106 107, on right: 102
E5 (131)
    on left: 108, on right: 105 106
struct_or_union (132)
    on left: 109 110, on right: 105 106 107
struct_declaration_list (133)
    on left: 111 112, on right: 105 106 112
struct_declaration (134)
    on left: 113, on right: 111 112
specifier_qualifier_list (135)
    on left: 114 115 116 117, on right: 113 114 116 157 158
struct_declarator_list (136)
    on left: 118 119, on right: 113 119
struct_declarator (137)
    on left: 120 121 122, on right: 118 119
enum_specifier (138)
    on left: 123 124 125, on right: 103
enumerator_list (139)
    on left: 126 127, on right: 123 124 127
enumerator (140)
    on left: 128 129, on right: 126 127
type_qualifier (141)
    on left: 130 131, on right: 82 83 116 117 146 147
declarator (142)
    on left: 132 133, on right: 86 87 120 122 135 152 215 216 217 218
direct_declarator (143)
    on left: 134 135 136 137 138 139 140, on right: 132 133 136 137
    138 139 140
E3 (144)
    on left: 141, on right: 138 139 140
pointer (145)
    on left: 142 143 144 145, on right: 132 144 145 159 161
type_qualifier_list (146)
    on left: 146 147, on right: 143 145 147
parameter_type_list (147)
    on left: 148 149, on right: 138 168 170
parameter_list (148)
    on left: 150 151, on right: 148 149 151
parameter_declaration (149)
    on left: 152 153 154, on right: 150 151
identifier_list (150)
    on left: 155 156, on right: 139 156
type_name (151)
    on left: 157 158, on right: 20 28
abstract_declarator (152)
    on left: 159 160 161, on right: 153 158 162
direct_abstract_declarator (153)
    on left: 162 163 164 165 166 167 168 169 170, on right: 160 161
    165 166 169 170
initializer (154)
    on left: 171 172 173, on right: 87 174 175
initializer_list (155)
    on left: 174 175, on right: 172 173 175
statement (156)
    on left: 176 177 178 179 180 181, on right: 182 183 184 192 193
    197 198 199 202 203 204 205
labeled_statement (157)
    on left: 182 183 184, on right: 176
compound_statement (158)
    on left: 185 186 187 188, on right: 177 215 216 217 218
E1 (159)
    on left: 189, on right: 186 187
declaration_list (160)
    on left: 190 191, on right: 187 188 191 215 217
statement_list (161)
    on left: 192 193, on right: 186 188 193
expression_statement (162)
    on left: 194 195, on right: 178 201 204 205
M4 (163)
    on left: 196, on right: 197 198
selection_statement (164)
    on left: 197 198 199, on right: 179
M6 (165)
    on left: 200, on right: 202 203
M7 (166)
    on left: 201, on right: 204 205
iteration_statement (167)
    on left: 202 203 204 205, on right: 180
jump_statement (168)
    on left: 206 207 208 209 210, on right: 181
translation_unit (169)
    on left: 211 212, on right: 0 212
external_declaration (170)
    on left: 213 214, on right: 211 212
function_definition (171)
    on left: 215 216 217 218, on right: 213
E2 (172)
    on left: 219, on right: 215 216


State 0

    0 $accept: . translation_unit $end

    CHAR        shift, and go to state 1
    CONST       shift, and go to state 2
    DOUBLE      shift, and go to state 3
    ENUM        shift, and go to state 4
    EXTERN      shift, and go to state 5
    FLOAT       shift, and go to state 6
    INT         shift, and go to state 7
    LONG        shift, and go to state 8
    REGISTER    shift, and go to state 9
    SHORT       shift, and go to state 10
    SIGNED      shift, and go to state 11
    STATIC      shift, and go to state 12
    STRUCT      shift, and go to state 13
    TYPEDEF     shift, and go to state 14
    UNION       shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    AUTO        shift, and go to state 19
    IDENTIFIER  shift, and go to state 20
    TYPE_NAME   shift, and go to state 21
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    declarator                 go to state 32
    direct_declarator          go to state 33
    pointer                    go to state 34
    translation_unit           go to state 35
    external_declaration       go to state 36
    function_definition        go to state 37


State 1

   94 type_specifier: CHAR .

    $default  reduce using rule 94 (type_specifier)


State 2

  130 type_qualifier: CONST .

    $default  reduce using rule 130 (type_qualifier)


State 3

   99 type_specifier: DOUBLE .

    $default  reduce using rule 99 (type_specifier)


State 4

  123 enum_specifier: ENUM . '{' enumerator_list '}'
  124               | ENUM . IDENTIFIER '{' enumerator_list '}'
  125               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 38
    '{'         shift, and go to state 39


State 5

   89 storage_class_specifier: EXTERN .

    $default  reduce using rule 89 (storage_class_specifier)


State 6

   98 type_specifier: FLOAT .

    $default  reduce using rule 98 (type_specifier)


State 7

   96 type_specifier: INT .

    $default  reduce using rule 96 (type_specifier)


State 8

   97 type_specifier: LONG .

    $default  reduce using rule 97 (type_specifier)


State 9

   92 storage_class_specifier: REGISTER .

    $default  reduce using rule 92 (storage_class_specifier)


State 10

   95 type_specifier: SHORT .

    $default  reduce using rule 95 (type_specifier)


State 11

  100 type_specifier: SIGNED .

    $default  reduce using rule 100 (type_specifier)


State 12

   90 storage_class_specifier: STATIC .

    $default  reduce using rule 90 (storage_class_specifier)


State 13

  109 struct_or_union: STRUCT .

    $default  reduce using rule 109 (struct_or_union)


State 14

   88 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 88 (storage_class_specifier)


State 15

  110 struct_or_union: UNION .

    $default  reduce using rule 110 (struct_or_union)


State 16

  101 type_specifier: UNSIGNED .

    $default  reduce using rule 101 (type_specifier)


State 17

   93 type_specifier: VOID .

    $default  reduce using rule 93 (type_specifier)


State 18

  131 type_qualifier: VOLATILE .

    $default  reduce using rule 131 (type_qualifier)


State 19

   91 storage_class_specifier: AUTO .

    $default  reduce using rule 91 (storage_class_specifier)


State 20

  134 direct_declarator: IDENTIFIER .

    $default  reduce using rule 134 (direct_declarator)


State 21

  104 type_specifier: TYPE_NAME .

    $default  reduce using rule 104 (type_specifier)


State 22

  135 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 20
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declarator         go to state 40
    direct_declarator  go to state 33
    pointer            go to state 34


State 23

  142 pointer: '*' .
  143        | '*' . type_qualifier_list
  144        | '*' . pointer
  145        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 2
    VOLATILE  shift, and go to state 18
    '*'       shift, and go to state 23

    $default  reduce using rule 142 (pointer)

    type_qualifier       go to state 41
    pointer              go to state 42
    type_qualifier_list  go to state 43


State 24

  214 external_declaration: declaration .

    $default  reduce using rule 214 (external_declaration)


State 25

   76 declaration: declaration_specifiers . ';'
   77            | declaration_specifiers . init_declarator_list ';'
  215 function_definition: declaration_specifiers . declarator E2 declaration_list compound_statement
  216                    | declaration_specifiers . declarator E2 compound_statement

    IDENTIFIER  shift, and go to state 20
    ';'         shift, and go to state 44
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    init_declarator_list  go to state 45
    init_declarator       go to state 46
    declarator            go to state 47
    direct_declarator     go to state 33
    pointer               go to state 34


State 26

   78 declaration_specifiers: storage_class_specifier .
   79                       | storage_class_specifier . declaration_specifiers

    CHAR       shift, and go to state 1
    CONST      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    ENUM       shift, and go to state 4
    EXTERN     shift, and go to state 5
    FLOAT      shift, and go to state 6
    INT        shift, and go to state 7
    LONG       shift, and go to state 8
    REGISTER   shift, and go to state 9
    SHORT      shift, and go to state 10
    SIGNED     shift, and go to state 11
    STATIC     shift, and go to state 12
    STRUCT     shift, and go to state 13
    TYPEDEF    shift, and go to state 14
    UNION      shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    AUTO       shift, and go to state 19
    TYPE_NAME  shift, and go to state 21

    $default  reduce using rule 78 (declaration_specifiers)

    declaration_specifiers     go to state 48
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 27

   80 declaration_specifiers: type_specifier .
   81                       | type_specifier . declaration_specifiers

    CHAR       shift, and go to state 1
    CONST      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    ENUM       shift, and go to state 4
    EXTERN     shift, and go to state 5
    FLOAT      shift, and go to state 6
    INT        shift, and go to state 7
    LONG       shift, and go to state 8
    REGISTER   shift, and go to state 9
    SHORT      shift, and go to state 10
    SIGNED     shift, and go to state 11
    STATIC     shift, and go to state 12
    STRUCT     shift, and go to state 13
    TYPEDEF    shift, and go to state 14
    UNION      shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    AUTO       shift, and go to state 19
    TYPE_NAME  shift, and go to state 21

    $default  reduce using rule 80 (declaration_specifiers)

    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 28

  102 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 102 (type_specifier)


State 29

  105 struct_or_union_specifier: struct_or_union . IDENTIFIER E5 '{' struct_declaration_list '}'
  106                          | struct_or_union . E5 '{' struct_declaration_list '}'
  107                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 50

    $default  reduce using rule 108 (E5)

    E5  go to state 51


State 30

  103 type_specifier: enum_specifier .

    $default  reduce using rule 103 (type_specifier)


State 31

   82 declaration_specifiers: type_qualifier .
   83                       | type_qualifier . declaration_specifiers

    CHAR       shift, and go to state 1
    CONST      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    ENUM       shift, and go to state 4
    EXTERN     shift, and go to state 5
    FLOAT      shift, and go to state 6
    INT        shift, and go to state 7
    LONG       shift, and go to state 8
    REGISTER   shift, and go to state 9
    SHORT      shift, and go to state 10
    SIGNED     shift, and go to state 11
    STATIC     shift, and go to state 12
    STRUCT     shift, and go to state 13
    TYPEDEF    shift, and go to state 14
    UNION      shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    AUTO       shift, and go to state 19
    TYPE_NAME  shift, and go to state 21

    $default  reduce using rule 82 (declaration_specifiers)

    declaration_specifiers     go to state 52
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31


State 32

  217 function_definition: declarator . declaration_list compound_statement
  218                    | declarator . compound_statement

    CHAR       shift, and go to state 1
    CONST      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    ENUM       shift, and go to state 4
    EXTERN     shift, and go to state 5
    FLOAT      shift, and go to state 6
    INT        shift, and go to state 7
    LONG       shift, and go to state 8
    REGISTER   shift, and go to state 9
    SHORT      shift, and go to state 10
    SIGNED     shift, and go to state 11
    STATIC     shift, and go to state 12
    STRUCT     shift, and go to state 13
    TYPEDEF    shift, and go to state 14
    UNION      shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    AUTO       shift, and go to state 19
    TYPE_NAME  shift, and go to state 21
    '{'        shift, and go to state 53

    declaration                go to state 54
    declaration_specifiers     go to state 55
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    compound_statement         go to state 56
    E1                         go to state 57
    declaration_list           go to state 58


State 33

  133 declarator: direct_declarator .
  136 direct_declarator: direct_declarator . '[' constant_expression ']'
  137                  | direct_declarator . '[' ']'
  138                  | direct_declarator . '(' E3 parameter_type_list ')'
  139                  | direct_declarator . '(' E3 identifier_list ')'
  140                  | direct_declarator . '(' E3 ')'

    '['  shift, and go to state 59
    '('  shift, and go to state 60

    $default  reduce using rule 133 (declarator)


State 34

  132 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 20
    '('         shift, and go to state 22

    direct_declarator  go to state 61


State 35

    0 $accept: translation_unit . $end
  212 translation_unit: translation_unit . M external_declaration

    $end  shift, and go to state 62

    $default  reduce using rule 53 (M)

    M  go to state 63


State 36

  211 translation_unit: external_declaration .

    $default  reduce using rule 211 (translation_unit)


State 37

  213 external_declaration: function_definition .

    $default  reduce using rule 213 (external_declaration)


State 38

  124 enum_specifier: ENUM IDENTIFIER . '{' enumerator_list '}'
  125               | ENUM IDENTIFIER .

    '{'  shift, and go to state 64

    $default  reduce using rule 125 (enum_specifier)


State 39

  123 enum_specifier: ENUM '{' . enumerator_list '}'

    IDENTIFIER  shift, and go to state 65

    enumerator_list  go to state 66
    enumerator       go to state 67


State 40

  135 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 68


State 41

  146 type_qualifier_list: type_qualifier .

    $default  reduce using rule 146 (type_qualifier_list)


State 42

  144 pointer: '*' pointer .

    $default  reduce using rule 144 (pointer)


State 43

  143 pointer: '*' type_qualifier_list .
  145        | '*' type_qualifier_list . pointer
  147 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST     shift, and go to state 2
    VOLATILE  shift, and go to state 18
    '*'       shift, and go to state 23

    $default  reduce using rule 143 (pointer)

    type_qualifier  go to state 69
    pointer         go to state 70


State 44

   76 declaration: declaration_specifiers ';' .

    $default  reduce using rule 76 (declaration)


State 45

   77 declaration: declaration_specifiers init_declarator_list . ';'
   85 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 71
    ';'  shift, and go to state 72


State 46

   84 init_declarator_list: init_declarator .

    $default  reduce using rule 84 (init_declarator_list)


State 47

   86 init_declarator: declarator .
   87                | declarator . '=' initializer
  215 function_definition: declaration_specifiers declarator . E2 declaration_list compound_statement
  216                    | declaration_specifiers declarator . E2 compound_statement

    '='  shift, and go to state 73

    ','       reduce using rule 86 (init_declarator)
    ';'       reduce using rule 86 (init_declarator)
    $default  reduce using rule 219 (E2)

    E2  go to state 74


State 48

   79 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 79 (declaration_specifiers)


State 49

   81 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 81 (declaration_specifiers)


State 50

  105 struct_or_union_specifier: struct_or_union IDENTIFIER . E5 '{' struct_declaration_list '}'
  107                          | struct_or_union IDENTIFIER .

    '{'       reduce using rule 108 (E5)
    $default  reduce using rule 107 (struct_or_union_specifier)

    E5  go to state 75


State 51

  106 struct_or_union_specifier: struct_or_union E5 . '{' struct_declaration_list '}'

    '{'  shift, and go to state 76


State 52

   83 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 83 (declaration_specifiers)


State 53

  185 compound_statement: '{' . '}'
  188                   | '{' . declaration_list statement_list '}'
  189 E1: '{' .

    CHAR      shift, and go to state 1
    CONST     shift, and go to state 2
    DOUBLE    shift, and go to state 3
    ENUM      shift, and go to state 4
    EXTERN    shift, and go to state 5
    FLOAT     shift, and go to state 6
    INT       shift, and go to state 7
    LONG      shift, and go to state 8
    REGISTER  shift, and go to state 9
    SHORT     shift, and go to state 10
    SIGNED    shift, and go to state 11
    STATIC    shift, and go to state 12
    STRUCT    shift, and go to state 13
    TYPEDEF   shift, and go to state 14
    UNION     shift, and go to state 15
    UNSIGNED  shift, and go to state 16
    VOID      shift, and go to state 17
    VOLATILE  shift, and go to state 18
    AUTO      shift, and go to state 19
    '}'       shift, and go to state 77

    CHAR      [reduce using rule 189 (E1)]
    CONST     [reduce using rule 189 (E1)]
    DOUBLE    [reduce using rule 189 (E1)]
    ENUM      [reduce using rule 189 (E1)]
    EXTERN    [reduce using rule 189 (E1)]
    FLOAT     [reduce using rule 189 (E1)]
    INT       [reduce using rule 189 (E1)]
    LONG      [reduce using rule 189 (E1)]
    REGISTER  [reduce using rule 189 (E1)]
    SHORT     [reduce using rule 189 (E1)]
    SIGNED    [reduce using rule 189 (E1)]
    STATIC    [reduce using rule 189 (E1)]
    STRUCT    [reduce using rule 189 (E1)]
    TYPEDEF   [reduce using rule 189 (E1)]
    UNION     [reduce using rule 189 (E1)]
    UNSIGNED  [reduce using rule 189 (E1)]
    VOID      [reduce using rule 189 (E1)]
    VOLATILE  [reduce using rule 189 (E1)]
    AUTO      [reduce using rule 189 (E1)]
    $default  reduce using rule 189 (E1)
